# projects

./: .gitignore  .gitmodules  asa.vim  boo  cscope.files  cscope.out  deleteme.vim  foo  iilidenta.html  ilidenta.html  numaritalia  ss.html  todo.markdown
c/prim/: .cproject
cgi/: form2.hi  form2.hs  form3.hi  form3.hs  form4.hs
clojure/: someTest.clj
clojure/AwesomeProject/: index.ios.js
clojure/hello-world/: perfection_test.js  project.clj
clojure/primul/: README.md  project.clj
clojure/ring-tutorial/: project.clj
clojure/tutorial/: project.clj
dprim/: dprim.sln
dprim/dprim/: dprim.dproj
haskell/: .exrc  Irc.hs  fishing.markdown  ilidenta.html  test.db3  typeFamilies.hs
haskell/Digester/: .MonadPlus.hs.swp  .Projection.hs.swo  Cont.hs  DivFactory.hs  GenericTree.hs  Html.hs  HtmlPlay.hs  IncercareCuWeb.hs  JustPlaying.hs  Monad.hs  MonadPlay.hs  MonadPlus.hs  Printers.hs  Projection.hs  ProjectionPlay.hs  Time.hs  Tree.hs  TreeM.hs  TreePlay.hs  TypeFamiliesPlay.hs  ViewPatternsPlay.hs  Web.hs  WebCollector.hs  [2]
haskell/applicative/: ZipList.hs
haskell/cabal/ltree/: LICENSE  ltree.cabal
haskell/cabal/ltree/Data/: LTree.hs  MTree.hs
haskell/cgi/: form4.hi
haskell/csv/: ZebraMain.hs  cabal.sandbox.config  myCsv.cabal  scoped.hs  withHeader.hs
haskell/cuda/: MetaProgramming.hs  Prim.hs  hrs-cuda.cabal
haskell/fay/: Hello.cabal  Hello.hs  Hello.js
monads/: filterM.hs  myIdentity.hs  reader.hs
nailgun-test/: README.md  project.clj
parsec/: parser.hs  receipt.hs
primul/: primul.sln  primul.userprefs
vim/: variables.vim
(+1084 files in other folders)
